--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -345,6 +345,10 @@
   .RightCard {
     margin: 0;
   }
+
+  .container {
+    margin-top: 120px;
+  }
 }
 
 /* placeholder for footer (parallax effect) */
